--- a/JavaPRO/src/main/resources/templates/index.html
+++ b/JavaPRO/src/main/resources/templates/index.html
@@ -43,8 +43,9 @@
         <thead class="thead-dark text-center">
         <tr>
             <th class="table-center" style="width: 5%" scope="col">#</th>
-            <th class="table-center" style="width: 45%" scope="col">Temat projektu</th>
-            <th class="table-center" style="width: 50%" scope="col">Opis</th>
+            <th class="table-center" style="width: 35%" scope="col">Temat projektu</th>
+            <th class="table-center" style="width: 40%" scope="col">Opis</th>
+            <th class="table-center" style="width: 20%" scope="col">Termin końcowy</th>
             <th class="table-center" style="width: 10%" scope="col">Wolny</th>
             <th class="table-center" style="width: 10%" scope="col" sec:authorize="hasRole('ROLE_USER') && !hasRole('ROLE_ADMIN')">Zarezerwuj</th>
         </tr>
@@ -54,6 +55,7 @@
             <th scope="row" class="table-center" th:text="${temat.getId()}"></th>
             <td th:text="${temat.getName()}"></td>
             <td th:text="${temat.getDescription()}"></td>
+            <td class="table-center" th:text="${temat.getDeadline()}"></td>
             <td class="table-center" th:text="${temat.getIsReserved() ? 'Nie' : 'Tak'}"></td>
             <td class="table-center" sec:authorize="hasRole('ROLE_USER') && !hasRole('ROLE_ADMIN')">
                 <a>
@@ -290,9 +292,7 @@
 <!--Background image-->
 <figure>
     <div class="fixed-wrap">
-        <div id="fixed" style="background-image: url('../img/fixed-background-3.jpg'); filter: blur(2px);">
-            <!--            <img src="/img/fixed-background.jpg">-->
-        </div>
+        <div id="fixed" style="background-image: url('../img/fixed-background-3.jpg'); filter: blur(2px);"></div>
     </div>
 </figure>
 
