--- a/JavaPRO/src/main/resources/templates/navbar.html
+++ b/JavaPRO/src/main/resources/templates/navbar.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="/adminPanel">Konto</a>
                 </li>
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
-                    <a class="nav-link" href="/login">Zaloguj</a>
+                    <a class="nav-link" href="/login">Logowanie</a>
                 </li>
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
                     <a class="nav-link" href="/register">Rejestracja</a>
