--- a/JavaPRO/src/main/resources/templates/navbar.html
+++ b/JavaPRO/src/main/resources/templates/navbar.html
@@ -17,6 +17,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto marginsy">
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" th:text="'Witaj '+${login}"></a>
+                </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/">Strona główna</a>
                 </li>
