--- a/JavaPRO/src/main/resources/templates/navbar.html
+++ b/JavaPRO/src/main/resources/templates/navbar.html
@@ -11,15 +11,19 @@
         <a class="navbar-brand" href="/">
             <img class="logo" src="/img/logo.png">
         </a>
+        <div class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+            <a class="nav-link kto-to" th:text="'Witaj '+${login}+'!'"></a>
+        </div>
+        <div class="nav-item" sec:authorize="hasRole('ROLE_USER')&&!hasRole('ROLE_ADMIN')">
+            <a class="nav-link kto-to" th:text="'Witaj '+${imie}+' '+${nazwisko}+'!'"></a>
+        </div>
         <!--przycisk z ikoną menu-->
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbar" aria-expanded="false">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto marginsy">
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" th:text="'Witaj '+${login}"></a>
-                </li>
+
                 <li class="nav-item active">
                     <a class="nav-link" href="/">Strona główna</a>
                 </li>
