--- a/JavaPRO/src/main/resources/templates/footer.html
+++ b/JavaPRO/src/main/resources/templates/footer.html
@@ -5,6 +5,14 @@
     <title>Title</title>
 </head>
 <body>
+
+<!--Background image-->
+<figure>
+    <div class="fixed-wrap">
+        <div id="fixed" style="background-image: url('../img/fixed-background-3.jpg'); filter: blur(2px);"></div>
+    </div>
+</figure>
+
 <!--Footer-->
 <footer>
     <div class="container-fluid padding">
